test/bad/variable_declaration_10.mpp
var foo:int;
var foo:real;
